@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- No more extra newlines to log_add() calls for libs/network/ code - SvdB
 - DUCK videos now play correctly after a video mode change; bug #734 - Alex
 - Cancel key will now quit out of the Manifest Menu (Bug #838) - Michael
 - Added -w and -x commandline options, to counter -f and -o; used these 
